--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,8 +15,7 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: rafaelleal18/gcms_pratica6:webapp
     permissions:
@@ -53,7 +52,7 @@ jobs:
 
   dependency-submission:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: write
 
