--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container:
       image: rafaelleal18/gcms_pratica6:webapp
     permissions:
@@ -52,7 +52,7 @@ jobs:
 
   dependency-submission:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
